samples/_failures_safe/1761192347_19532f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59cf22a9.c: In function ‘handle_event’:
./samples/SAFE/__tmp_59cf22a9.c:152:30: error: expected ‘)’ at end of input
  152 |             if (write_data(sm
      |                           ~  ^
      |                              )
./samples/SAFE/__tmp_59cf22a9.c:152:13: error: expected declaration or statement at end of input
  152 |             if (write_data(sm
      |             ^~
./samples/SAFE/__tmp_59cf22a9.c:152:13: error: expected declaration or statement at end of input
